	* Download and install Collect.apk
	* Start Collect
	* Choose the downloaded survey.collect-mobile file in the file chooser


Install an update
-----------------

    * Stop Collect if it's running
    * Clear data (this will removed any previously collected data)
    * Download and install Collect.apk
    * Start Collect
    * Choose your collect.db file in the file chooser


Changes
-------

2014-07-25

    * Fixed crash in species selection

2014-07-23

    * Allowed the exact path of the working directory to be specified
    * Included a panel with the entity keys, to provide information what entity data is inserted for.

2014-07-18

    * Added option to store data on SD card
    * Included backup functionality
    * Specified crew ID is now displayed in the settings
    * Put exported files on SD card if data is stored on secondary storage
    * Moved exported records directly into the cleansing phase
    * Marked empty attributes as "blank in form"

2014-07-11

    * Added setting to capture the crew ID
    * Supported survey design format exported in Collect Server
    * Uniqueness or record keys are validated
    * Fixed bug where record list wasn't properly updated when record key attribute changed

2014-07-04

    * This version is required to run surveys defined with Collect 3.1.x

2014-06-27

    * Current SRS for coordinate wasn't selected in spinner.

2014-06-13b

    * Stopped transforming coordinates when spatial reference system changes
    * Defaulted time picker to current time, if time is unspecified

2014-06-13

    * Split coordinate attribute into separate fields
    * Added support for selecting and transforming between spatial reference systems
    * Implemented distance check
    * Put hint on date and time fields

2014-06-10

    * Enabled gray overlay for irrelevant fields in all Android versions
    * Added support for boolean attributes

2014-06-06b
