@@ -55,7 +55,7 @@ public abstract class NodeDetailFragment<T extends UiNode> extends Fragment {
 
 
         ScrollView scrollView = new ScrollView(getActivity());
-        scrollView.setFillViewport(true);
+//        scrollView.setFillViewport(true); // TODO: It doesn't take node key details into account
         scrollView.addView(rootView);
 
         FrameLayout frameLayout = new FrameLayout(getActivity());
