@@ -5,6 +5,7 @@ package org.openforis.collect.android.viewmodel;
  */
 public class UiCodeAttribute extends UiAttribute {
     private UiCode code;
+    private String qualifier;
 
     public UiCodeAttribute(int id, Definition definition) {
         super(id, definition);
@@ -16,6 +17,14 @@ public class UiCodeAttribute extends UiAttribute {
 
     public synchronized UiCode getCode() {
         return code;
+    }
+
+    public String getQualifier() {
+        return qualifier;
+    }
+
+    public void setQualifier(String qualifier) {
+        this.qualifier = qualifier;
     }
 
     public boolean isEmpty() {
